==> evencewu/orthrus-1/2.Software/leg/ECAT_TEST1/stm32_ecat/STM32F405 Ethercat/Ethercat/src/el9800hw.c <==
#include "ecat_def.h"
#include "ecatslv.h"
#define    _EL9800HW_ 1
#include "el9800hw.h"
#include "ecatappl.h"
#define SPI1_SEL                        _LATB2
#define SPI1_IF                            _SPI1IF
#define SPI1_BUF                        SPI1BUF
#define SPI1_CON1                        SPI1CON1
#define SPI1_STAT                        SPI1STAT
#define    WAIT_SPI_IF                        while( !SPI1_IF);
#define    SELECT_SPI                        {(SPI1_SEL) = (SPI_ACTIVE);}
#define    DESELECT_SPI                    {(SPI1_SEL) = (SPI_DEACTIVE);}
#define    INIT_SSPIF                        {(SPI1_IF)=0;}
#define SPI1_STAT_VALUE                    0x8000
#define SPI1_CON1_VALUE                    0x027E
#define SPI1_CON1_VALUE_16BIT            0x047E
#define SPI_DEACTIVE                    1
#define SPI_ACTIVE                        0
#define DISABLE_GLOBAL_INT            SET_CPU_IPL(4) //set CPU priority to level 4 (disable interrupt level 1 - 4)
#define ENABLE_GLOBAL_INT            SET_CPU_IPL(0)
#define    DISABLE_AL_EVENT_INT        DISABLE_GLOBAL_INT
#define    ENABLE_AL_EVENT_INT            ENABLE_GLOBAL_INT
#define    INIT_ESC_INT               {(_INT1EP) = 1;(_INT1IP) = 1;} //_INT1EP = 1:  negative edge ; _INT1IP = 1; //highest priority
#define    ESC_INT_REQ                (_INT1IF) //ESC Interrupt (INT1) state
#define    INT_EL                    (_RD8) //ESC Interrupt input port

UINT8 HW_Init(void)
{
/*ECATCHANGE_START(V5.11) EL9800 2*/
    UINT32 intMask;
/*ECATCHANGE_END(V5.11) EL9800 2*/

    PORT_CFG;

    //Setup analog input
    AD1PCFGLbits.PCFG3 = 0x0;    //set RB3 to analog input
    AD1CON1 = 0x0404; // ASAM bit = 1 implies sampling ..
    AD1CHS0= 0x0003; // Connect RB3/AN3 as CH0 input ..
    AD1CSSL = 0;
    AD1CON3 = 0x0002; // Sample time manual, Tad = internal 2 Tcy
    AD1CON2 = 0;
    AD1CON1bits.ADON = 1; // turn ADC ON

    //configure clock
    // Im Referenzdesign lauft das ganze mit 10Mhz extere Oszillatorclock.
    // Fcy = (1/2) * ((10000000*32)/(2*2)) = 40 MIPS
    // extern 10Mhz / 2 (PLLPRE) = 5Mhz
    // 5 Mhz * 32 (PLLFBD) = 160Mhz (VCO)
    // 160Mhz / 2 (PLLPOST) = 80Mhz (FCY) -> entspricht 40 MIPS
    PLLFBD = 0x1E; // 30, da aber 0 == 2 entspricht dieser Wert 32
    CLKDIVbits.PLLPOST = 0; // 0 entspricht 2, Fcy == 80 MHz The resultant device operating speed is 80/2 = 40 MIPS
    CLKDIVbits.PLLPRE  = 0; // CLKDIVbits.PRESCLR = 0; 0 entspricht 2


    //unlock OSCCON-Register High
    //set Primary Oscillator with PLL
    __builtin_write_OSCCONH(0x03);

    //unlock OSCCON-Register Low
    //start clockswitching
    __builtin_write_OSCCONL(0x01);

    //wait for clockswitch and ready PLL
    while(OSCCONbits.COSC != 3);
    while(OSCCONbits.LOCK != 1);


      /* initialize the SPI registers for the ESC SPI */
    SPI1_CON1 = SPI1_CON1_VALUE;
    SPI1_STAT = SPI1_STAT_VALUE;


/*ECATCHANGE_START(V5.11) EL9800 2*/
    do
    {
        intMask = 0x93;
        HW_EscWriteDWord(intMask, ESC_AL_EVENTMASK_OFFSET);
        intMask = 0;
        HW_EscReadDWord(intMask, ESC_AL_EVENTMASK_OFFSET);
    } while (intMask != 0x93);

    intMask = 0x00;

    HW_EscWriteDWord(intMask, ESC_AL_EVENTMASK_OFFSET);

/*ECATCHANGE_END(V5.11) EL9800 2*/
    INIT_ESC_INT
    ENABLE_ESC_INT();

    INIT_SYNC0_INT
    INIT_SYNC1_INT

    ENABLE_SYNC0_INT;
    ENABLE_SYNC1_INT;

    INIT_ECAT_TIMER;
    START_ECAT_TIMER;

    /* enable all interrupts */
    ENABLE_GLOBAL_INT;

    return 0;
}

void HW_EscRead( MEM_ADDR *pData, UINT16 Address, UINT16 Len )
{
    /* HBu 24.01.06: if the SPI will be read by an interrupt routine too the
                     mailbox reading may be interrupted but an interrupted
                     reading will remain in a SPI transmission fault that will
                     reset the internal Sync Manager status. Therefore the reading
                     will be divided in 1-byte reads with disabled interrupt */
    UINT16 i = Len;
    UINT8 *pTmpData = (UINT8 *)pData;

    /* loop for all bytes to be read */
    while ( i-- > 0 )
    {
        /* the reading of data from the ESC can be interrupted by the
           AL Event ISR, in that case the address has to be reinitialized,
           in that case the status flag will indicate an error because
           the reading operation was interrupted without setting the last
           sent byte to 0xFF */
        DISABLE_AL_EVENT_INT;
         AddressingEsc( Address, ESC_RD );

        /* when reading the last byte the DI pin shall be 1 */
        SPI1_BUF = 0xFF;
        /* wait until transmission finished */
        WAIT_SPI_IF
        /* get data byte */
        *pTmpData++ = SPI1_BUF;
        /* enable the ESC interrupt to get the AL Event ISR the chance to interrupt,
           if the next byte is the last the transmission shall not be interrupted,
           otherwise a sync manager could unlock the buffer, because the last was
           read internally */
        ENABLE_AL_EVENT_INT;
        /* there has to be at least 15 ns + CLK/2 after the transmission is finished
           before the SPI1_SEL signal shall be 1 */
        DESELECT_SPI
        /* next address */
        Address++;
        /* reset transmission flag */
        SPI1_IF = 0;
    }
}

void HW_EscWrite( MEM_ADDR *pData, UINT16 Address, UINT16 Len )
{
    UINT16 i = Len;
    VARVOLATILE UINT8 dummy;

    UINT8 *pTmpData = (UINT8 *)pData;

    /* loop for all bytes to be written */
    while ( i-- > 0 )
    {
        /* the reading of data from the ESC can be interrupted by the
           AL Event ISR, so every byte will be written separate */
        DISABLE_AL_EVENT_INT;
        /* HBu 24.01.06: wrong parameter ESC_RD */
         AddressingEsc( Address, ESC_WR );
        /* start transmission */
        SPI1_BUF = *pTmpData++;
        /* wait until transmission finished */
        WAIT_SPI_IF
        /* enable the ESC interrupt to get the AL Event ISR the chance to interrupt */
        /* SPI1_BUF must be read, otherwise the module will not transfer the next received data from SPIxSR to SPIxRXB.*/
        dummy = SPI1_BUF;
        ENABLE_AL_EVENT_INT;
        /* there has to be at least 15 ns + CLK/2 after the transmission is finished
           before the SPI1_SEL signal shall be 1 */

        DESELECT_SPI
        /* next address */
        Address++;
        /* reset transmission flag */
        SPI1_IF = 0;

    }
}
